# fastapi_skeleton

./: .gitignore  Dockerfile  README.md  dodo.py  pyproject.toml
app/: main.py
tests/: test_main.py
